# plato-i2i

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/plato_i2i/: __init__.py  protocol.py
src/plato_i2i.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
