[package]
name = "plato-i2i"
version = "0.1.0"
edition = "2021"
description = "I2I inter-agent protocol — message formatting, routing, trust-weighted delivery"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "plato_i2i"
path = "src/lib.rs"
